# OpenAVMedia

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
patch/: CMakeLists.txt  combine_static_libs.sh  modify_mkvparser.sh  modify_soloud_cmake.sh  patch_sdl_mixer.cmake  patch_webm.cmake
tests/: CMakeLists.txt  main.cpp  test1.cpp  test3.cpp  test3.hpp  test5.cpp  test5.hpp  test7.cpp
tests/assets/: 536260.opus  sounds_cc0.txt
